# ml-playground

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ScatterPlot.tsx
frontend/src/types/: api.ts
src/app/: main.py
src/app/api/routers/: dataset.py  model.py
src/app/core/config/: __init__.py  settings.py
src/app/domain/: base.py  circle.py  diagonal.py  gaussian.py  linear.py  spiral.py  xor.py
src/app/schemas/: dataset.py  model.py
src/app/services/: base_service.py  dataset_service.py  decision_tree.py  k_nearest_neighbors.py  linear_discriminat_analysis.py  logistic_regression.py  model_service.py  naive_bayes.py  quadratic_discriminant_analysis.py  support_vector_machines.py
tests/api/: test_dataset_router.py
tests/domain/: test_datasets.py
tests/services/: test_dataset_service.py  test_model_service.py
