[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ml-playground"
version = "0.1.0"
description = "Machine Learning Playground Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pydantic",
    "numpy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]